# sopros-osa-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/sopros_osa_backend/: __init__.py  main.py
src/sopros_osa_backend/model/: __init__.py  claim.py  sopros_answer.py  sopros_country.py  sopros_country_name.py  sopros_provision.py  sopros_question.py  sopros_rule.py  sopros_status.py  sopros_type.py  state.py
src/sopros_osa_backend/resources/: country.yml  gbr.yml  provision.yml  status.yml  type.yml
src/sopros_osa_backend/resources/old/: ger.yml
tests/: __init__.py  test_main.py
