[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sopros-osa-backend"
dynamic = ["version"]
description = 'Python Bakcend for sopros'
readme = "README.md"
requires-python = ">=3.7"
license-files = { paths = ["LICENSE.md"] }
keywords = []
authors = [
  { name = "abcoden", email = "abcoden@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi==0.104.0",
  "pyyaml",
  "uvicorn"
]

[project.urls]
Documentation = "https://github.com/abcoden/sopros-osa-backend#readme"
Issues = "https://github.com/abcoden/sopros-osa-backend/issues"
Source = "https://github.com/abcoden/sopros-osa-backend"

[tool.hatch.version]
path = "src/sopros_osa_backend/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "httpx",
  "pytest",
]

[tool.hatch.envs.default.scripts]
serve = "uvicorn src.sopros_osa_backend.main:app --reload {args}"
imagebuild = "hatch build && podman build -t localhost/abcoden/sopros_osa_backend:$(hatch version) --env=VERSION=$(hatch version) ."
imagestart = "podman run --rm --network=host --name sopros_osa_backend {args} localhost/abcoden/sopros_osa_backend:$(hatch version)"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-html = [
  "- coverage combine",
  "coverage html",
]
cov = [
  "test-cov",
  "cov-report",
  "cov-html",
]
open-cov = "firefox --private-window htmlcov/index.html"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/sopros_osa_backend tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["sopros_osa_backend"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["sopros_osa_backend", "tests"]
branch = true
parallel = true
omit = [
  "src/sopros_osa_backend/__about__.py",
]

[tool.coverage.paths]
sopros_osa_backend = ["src/sopros_osa_backend", "*/sopros-osa-backend/src/sopros_osa_backend"]
tests = ["tests", "*/sopros-osa-backend/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
